replace tinyioc with autofac

--- a/Stratum.Droid/Assets/about.html
+++ b/Stratum.Droid/Assets/about.html
@@ -47,6 +47,11 @@
     <p><a href="https://www.bouncycastle.org/csharp/licence.html">Bouncy Castle C# License</a></p>
     <a href="https://www.bouncycastle.org/csharp">https://www.bouncycastle.org/csharp</a>
 
+    <h3>SQLCipher</h3>
+    <p>Copyright &copy; Zetetic LLC</p>
+    <p>Zetetic Community Edition Open Source License</p>
+    <a href="https://github.com/sqlcipher/sqlcipher">https://github.com/sqlcipher/sqlcipher</a>
+
     <h3>sqlite-net</h3>
     <p>Copyright &copy; Krueger Systems, Inc.</p>
     <p>MIT License</p>
@@ -82,10 +87,10 @@
     <p>MIT License</p>
     <a href="https://github.com/icsharpcode/SharpZipLib">https://github.com/icsharpcode/SharpZipLib</a>
     
-    <h3>TinyIoC</h3>
-    <p>Copyright &copy; 2016 Steven Robbins</p>
+    <h3>AutoFac</h3>
+    <p>Copyright &copy; 2014 Autofac Project</p>
     <p>MIT License</p>
-    <a href="https://github.com/grumpydev/TinyIoC">https://github.com/grumpydev/TinyIoC</a>
+    <a href="https://github.com/autofac/Autofac">https://github.com/autofac/Autofac</a>
     
     <h3>Konscious.Security.Cryptography</h3>
     <p>Copyright &copy; 2017 Keef Aragon</p>
